# duckdb-cache-prewarm

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
bench/: README.md  benchmark.cpp  benchmark.sh  clickbench.cpp  load.sql  parquet_metadata.cpp  parquet_metadata_queries.sql  plot_bench.py  run.sh  run_all.sh  run_baseline.sh  run_parquet_metadata.sh  run_prewarm_buffer.sh  run_prewarm_read.sh  show_improvement.py
bench/1brc/: README.md
src/: cache_prewarm_extension.cpp
src/core/: block_collector.cpp  buffer_prewarm_strategy.cpp  os_prefetch.cpp  parquet_metadata_prewarmer.cpp  prefetch_prewarm_strategy.cpp  prewarm_strategies.cpp  prewarm_strategy.cpp  prewarm_strategy_factory.cpp  read_prewarm_strategy.cpp  remote_block_collector.cpp  remote_prewarm_strategy.cpp
src/functions/: prewarm_function.cpp  prewarm_parquet_metadata_function.cpp  prewarm_remote_function.cpp
src/include/: cache_prewarm_extension.hpp  scope_guard.hpp
src/include/core/: block_collector.hpp  buffer_prewarm_strategy.hpp  os_prefetch.hpp  parquet_metadata_prewarmer.hpp  prefetch_prewarm_strategy.hpp  prewarm_strategies.hpp  prewarm_strategy.hpp  prewarm_strategy_factory.hpp  read_prewarm_strategy.hpp  remote_block_collector.hpp  remote_prewarm_strategy.hpp
src/include/functions/: prewarm_function.hpp  prewarm_parquet_metadata_function.hpp  prewarm_remote_function.hpp
src/include/utils/include/: block_offset.hpp  parse_size.hpp  span.hpp
src/utils/: parse_size.cpp
test/sql/: cache_prewarm.test  cache_prewarm_correctness.test  cache_prewarm_edge_cases.test  extension_load.test  prewarm_parquet_metadata.test  prewarm_remote.test
test/unittest/: CMakeLists.txt  mock_filesystem.hpp  prewarm_mock_filesystem.cpp  test_parse_size.cpp  test_remote_block_collector.cpp  test_remote_prewarm_strategy.cpp  test_span.cpp
test/unittest/include/: prewarm_mock_filesystem.hpp
